fix: overflow

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -20,6 +20,7 @@ h1
         margin-bottom 10px
 #board
     width 640px
+    overflow hidden
 
 .btn
     -webkit-appearance none
